WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21538
Transitions between apparently matching transform values don't always work
https://bugs.webkit.org/show_bug.cgi?id=21538
Summary
Transitions between apparently matching transform values don't always work
Simon Fraser (smfr)
Reported
2008-10-10 17:19:49 PDT
Sometimes, transitions between different values of -webkit-transform don't work, even when they appear that they should. The problem is that the TransformOperations blendFunc() is changing the transform ops list out from under us; it is inserting identity operations in place of other operations that happen to be identity (like "rotate(0)"). Because of this, the transform operation lists in the old and new states no longer match by type, and the transition fails to run.
Attachments
Patch, testcase, changelog
(4.97 KB, patch)
2008-10-10 17:24 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-10-10 17:24:37 PDT
Created
attachment 24285
[details]
Patch, testcase, changelog
Darin Adler
Comment 2
2008-10-10 17:25:59 PDT
Comment on
attachment 24285
[details]
Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 3
2008-10-10 17:35:36 PDT
M WebCore/ChangeLog M WebCore/page/animation/AnimationBase.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/matched-transform-functions.html A LayoutTests/transitions/matched-transform-functions-expected.txt
r37496
= 72df8f02cd52c2446f5196f55b0af4e069d8d817 (trunk)
Simon Fraser (smfr)
Comment 4
2008-10-10 17:35:45 PDT
Fooey
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug