2008-10-10  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=21538

        The blendFunc() for TransformOperations should never mess with the
        operation lists by replacing some ops with identity, otherwise the lists
        no longer match and transitions break.

        Test: transitions/matched-transform-functions.html

        * page/animation/AnimationBase.cpp:
        (WebCore::blendFunc):

Canonical link: https://commits.webkit.org/29741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37496 268f45cc-cd09-0410-ab3c-d52691b4dbfc