WebCore/page/animation/AnimationBase.cpp
@@ -121,8 +121,8 @@ static inline TransformOperations blendFunc(const AnimationBase* anim, const Tra
         unsigned toSize = to.operations().size();
         unsigned size = max(fromSize, toSize);
         for (unsigned i = 0; i < size; i++) {
-            RefPtr<TransformOperation> fromOp = (i < fromSize && !from.operations()[i]->isIdentity()) ? from.operations()[i].get() : 0;
-            RefPtr<TransformOperation> toOp = (i < toSize && !to.operations()[i]->isIdentity()) ? to.operations()[i].get() : 0;
+            RefPtr<TransformOperation> fromOp = (i < fromSize) ? from.operations()[i].get() : 0;
+            RefPtr<TransformOperation> toOp = (i < toSize) ? to.operations()[i].get() : 0;
             RefPtr<TransformOperation> blendedOp = toOp ? toOp->blend(fromOp.get(), progress) : (fromOp ? fromOp->blend(0, progress, true) : 0);
             if (blendedOp)
                 result.operations().append(blendedOp);
